--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=MPF
 
-spring.datasource.url = jdbc:mysql://localhost:3306/frameworkDb?createDatabaseIfNotExist=true
+spring.datasource.url = jdbc:mysql://localhost:3306/mpf?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Ashish$405
 spring.jpa.hibernate.ddl-auto=update
